@@ -1,5 +1,6 @@
 UNRELEASED
   * Allow running as non-root on Mac OS X by using non-privileged ICMP (#7)
+  * Remove unnecessary IPv6 socket options
 
 2013-10-10  David Schweikert  <david@schweikert.ch>
   * Version 3.6
